# @start 1
# configure.in -- Process this file with autoconf to produce configure
# @start 2
# Copyright (C) 2006 Alexander Petry
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2, or (at your option)
# any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.

# @start 1
AC_INIT(src/Logger.cc)
AC_CONFIG_AUX_DIR(config)
AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(ipna-ft, 0.5)

AC_PROG_CC
AC_PROG_RANLIB

AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS(errno.h strings.h unistd.h)

AC_C_CONST
AC_TYPE_PID_T
AC_TYPE_SIZE_T

AC_CHECK_FUNCS(bzero memset, break)
AC_CHECK_FUNCS(calloc strchr strrchr)

AC_SUBST(ac_aux_dir)

AC_OUTPUT([Makefile],
[test -z "$CONFIG_HEADERS" || echo timestamp > src/stamp-h.in])
# @end 1
